sucessully modified resume preview with custom latex template